@@ -1,3 +1,9 @@
+Mon Dec 22 19:06:31 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/datastructures.py,xappy/searchconnection.py,
+	  xappy/unittests/field_groups.py: Move grouped_data into
+	  ProcessedDocument, and change it into a property, to match data.
+
 Mon Dec 22 18:50:51 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Add doccomment for query_distance().
